# DevSec

./: .common_pattern.txt.swp  .gitignore  FunctionList.txt  LICENSE  README.md  build.gradle  common_pattern.txt  get_common_pattern.py  pattern_analysis.txt  pattern_analysis2.txt  pattern_analysis3.txt  transform.py
app/: build.gradle
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/SMU/DevSec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: items.txt  model.pt  public.pem  vdexExtractor
app/src/main/assets/targets/: boot-framework.oat  framework.oat  services.oat
app/src/main/cpp/: CMakeLists.txt  CheckFlags.cpp  ReadOffset.cpp  ReadOffset.h  fakedl.cpp  fakedl.h  get_offset.c  get_offset.cpp  logoutput.h  native-lib.cpp  split.c
app/src/main/cpp/dexinfo/: CMakeLists.txt  dexinfo  dexinfo.c  dexinfo.cpp  dexinfo.h  logoutput.h
app/src/main/cpp/libflush/: Android.mk  Application.mk  CMakeLists.txt  README.md  config.cmake  config.mk  map.txt
app/src/main/cpp/libflush/libflush/: calibrate.c  calibrate.h  hit.c  hit.h  internal.h  libflush.c  logoutput.h  threads.h  timing.c
app/src/main/cpp/libflush/libflush/armv8/: flush.h  libflush.c  libflush.h  memory.h  timing.h
app/src/main/cpp/oat-parser/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  StringPiece.cpp  StringPiece.h  cmake_install.cmake  logoutput.h  oatparser  oatparser.h  script.py
app/src/main/cpp/oat-parser/art/: compiler_filter.cpp  compiler_filter.h
app/src/main/cpp/oat-parser/base/: bit_vector.h
app/src/main/cpp/oat-parser/dex/: dex_file.h  dex_file_structs.h  type_lookup_table.h
app/src/main/cpp/oat-parser/elf/: elfcpp.h  elfcpp_file.h  elfcpp_internal.h  elfcpp_swap.h  elfloader.cpp  exec_buffer.h  map_file.h  sparc.h
app/src/main/cpp/oat-parser/oat/: DexHeader.h  OATHeader.cpp  OATHeader.h  OATParser.cpp  OATParser.h  class_status.h  elfloader.h  index_bss_mapping.h  instruction_set.h
app/src/main/cpp/oat-parser/testfile/: base.odex  base.vdex  boot.oat  boot.vdex  com.android.location.provider.odex  foodpanda.odex
app/src/main/java/com/SMU/DevSec/: ActivityforResult.java  AfterTrialModel.java  AppInfo.java  AppInfoAdapter.java  AppList.java  AppManager.java  Base64Utils.java  BasicInfo.java  CacheScan.java  Classifier.java  CompilerValue.java  CrashHandler.java  FilterRunnable.java  FrontAppValue.java  GroundTruthValue.java  ItemsCheck.java  JobInsertRunnable.java  LogcatHelper.java  MainActivity.java  MonitorFrontEvent.java  NotificationClickReceiver.java  PermissionRequire.java  RSA.java  Register.java  RestartTest.java  SideChannelContract.java  SideChannelJob.java  SideChannelValue.java  SocketHttpRequester.java  TimerManager.java  TrialModel.java  TrialModelCheck.java  TrialModelStages.java  TrialModelStages_backup.java  UserFeedback.java  Utils.java
app/src/main/res/color/: switch_text_selector.xml
app/src/main/res/drawable/: button_shape.xml  checkbox_style.xml  ic_launcher_background.xml  switch_ios_thumb.xml  switch_ios_track_off.xml  switch_ios_track_on.xml  switch_ios_track_selector.xml
app/src/main/res/layout/: activity_main.xml  activity_main_backup.xml  after_trai_model.xml  applist_layout.xml  data_collecter_layout.xml  item_check.xml  item_main.xml  perm_selection_layout.xml  permission_item.xml  permission_layout.xml  permisson_require.xml  register_layout.xml  restart_application.xml  title_1.xml  title_2.xml  title_3.xml  trial_model_layout.xml  trial_stage.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/SMU/DevSec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
